# brightness_of_the_picture

./: CMakeLists.txt  main.cpp
